CHATS_SIT/force-app/main/default/objects/T_COUNTY_RATE__c.object
<CustomObject>
    <description>County Rate</description>
    <fields>
        <fullName>CDE_RATE_PLAN_TEMPLT__c</fullName>
        <description>County Rate Plan Template</description>
        <label>County Rate Plan Template</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>RT_COUNTY_RATE_PLAN_TEMPLT</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>CDE_STATUS__c</fullName>
        <description>Status</description>
        <label>Status(Old)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>R00676</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>CFS_Q1_1__c</fullName>
        <description>CFS_Q1_1</description>
        <label>CFS_Q1_1</label>
        <precision>17</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CFS_Q1_2__c</fullName>
        <description>CFS_Q1_2</description>
        <label>CFS_Q1_2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CFS_Q1_3__c</fullName>
        <label>CFS_Q1_3</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>5</fullName>
                    <label>Areas where quality programs are in short supply for children enrolled in CCCAP</label>
                </value>
                <value>
                    <fullName>4</fullName>
                    <label>Children in underserved areas due to inadequate child care services and/or resources</label>
                </value>
                <value>
                    <fullName>3</fullName>
                    <label>Children needing care during non-traditional hours (i.e. evening, overnight, and weekend care)</label>
                </value>
                <value>
                    <fullName>2</fullName>
                    <label>Children with additional care needs</label>
                </value>
                <value>
                    <fullName>1</fullName>
                    <label>Infants and toddlers</label>
                </value>
                <value>
                    <fullName>6</fullName>
                    <label>Other</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CFS_Q1__c</fullName>
        <label>CFS_Q1</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>RT_YES_NO</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>CFS_Q2_OTHER__c</fullName>
        <description>CFS_Q2_OTHER</description>
        <label>CFS_Q2_OTHER</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CFS_Q2__c</fullName>
        <description>CFS_Q2</description>
        <label>CFS_Q2</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>RT_CFS_Q2</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>CFS_Q3__c</fullName>
        <description>CFS_Q3</description>
        <label>CFS_Q3</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DTE_BEGIN_EFFV_RATE__c</fullName>
        <description>Effective Begin Date</description>
        <label>Effective Begin Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DTE_END_EFFV_RATE__c</fullName>
        <description>Effective End Date</description>
        <label>Effective End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Flow_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The field is marked true when all the fields are filled on the flow and record
            can be submitted for approval</description>
        <label>Flow Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IDN_COUNTY__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>County</description>
        <label>County</label>
        <referenceTo>T_COUNTY__c</referenceTo>
        <relationshipLabel>County Rate Plan</relationshipLabel>
        <relationshipName>County4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IDN_EXTNL__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IND_RATE_PLAN_TEMPLT__c</fullName>
        <defaultValue>false</defaultValue>
        <description>County Rate Plan Template Indicator</description>
        <label>County Rate Plan Template Indicator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PAYMENT_Q10_1__c</fullName>
        <description>PAYMENT_Q10_1</description>
        <label>PAYMENT_Q10_1</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PAYMENT_Q10__c</fullName>
        <description>PAYMENT_Q10</description>
        <label>PAYMENT_Q10</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>RT_YES_NO</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>PAYMENT_Q11_1__c</fullName>
        <description>PAYMENT_Q11_1</description>
        <label>PAYMENT_Q11_1</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PAYMENT_Q11__c</fullName>
        <description>PAYMENT_Q11</description>
        <label>PAYMENT_Q11</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>RT_YES_NO</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>PAYMENT_Q12_2_OTHER__c</fullName>
        <description>PAYMENT_Q12_2_OTHER</description>
        <label>PAYMENT_Q12_2_OTHER</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PAYMENT_Q12__c</fullName>
        <description>PAYMENT_Q12</description>
        <label>PAYMENT_Q12</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>RT_YES_NO</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>PAYMENT_Q13_OTHER__c</fullName>
        <description>PAYMENT_Q13_OTHER</description>
        <label>PAYMENT_Q13_OTHER</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PAYMENT_Q13_a__c</fullName>
        <description>PAYMENT_Q13_a</description>
        <label>PAYMENT_Q13_a</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PAYMENT_Q13_b__c</fullName>
        <description>PAYMENT_Q13_b</description>
        <label>PAYMENT_Q13_b</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PAYMENT_Q13_c__c</fullName>
        <description>PAYMENT_Q13_c</description>
        <label>PAYMENT_Q13_c</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PAYMENT_Q13_d__c</fullName>
        <description>PAYMENT_Q13_d</description>
        <label>PAYMENT_Q13_d</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PAYMENT_Q13_e__c</fullName>
        <description>PAYMENT_Q13_e</description>
        <label>PAYMENT_Q13_e</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PAYMENT_Q14_4_1__c</fullName>
        <label>PAYMENT_Q14_4_1</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>RT_PAYMENT_Q14_3</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>PAYMENT_Q14_4_2__c</fullName>
        <label>PAYMENT_Q14_4_2</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>R00619</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>PAYMENT_Q14_4_3__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>PAYMENT_Q14_4_3</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PAYMENT_Q17_OTHER__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>PAYMENT_Q17_OTHER</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PAYMENT_Q18_OTHER__c</fullName>
        <description>PAYMENT_Q18_OTHER</description>
        <label>PAYMENT_Q18_OTHER</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>

    <fields>
        <fullName>QEP_Q1__c</fullName>
        <label>QEP_Q1</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>RT_YES_NO</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>QEP_Q1_new__c</fullName>
        <label>QEP_Q1_new</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>R00888</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>QEP_Q2__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>QEP_Q2</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>RATE_TYPE__c</fullName>
        <description>RATE_TYPE</description>
        <label>RATE_TYPE</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>R00751</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>ROO_Q1_10__c</fullName>
        <description>ROO_Q1_10</description>
        <label>ROO_Q1_10</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ROO_Q1_1_1__c</fullName>
        <defaultValue>false</defaultValue>
        <description>ROO_Q1_1_1</description>
        <label>ROO_Q1_1_1</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ROO_Q1_1_1a__c</fullName>
        <description>ROO_Q1_1_1a</description>
        <label>ROO_Q1_1_1a</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ROO_Q1_1_2__c</fullName>
        <defaultValue>false</defaultValue>
        <description>ROO_Q1_1_2</description>
        <label>ROO_Q1_1_2</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ROO_Q1_1_2a__c</fullName>
        <description>ROO_Q1_1_2a</description>
        <label>ROO_Q1_1_2a</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ROO_Q1_1_3__c</fullName>
        <defaultValue>false</defaultValue>
        <description>ROO_Q1_1_3</description>
        <label>ROO_Q1_1_3</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ROO_Q1_1_3a__c</fullName>
        <description>ROO_Q1_1_3a</description>
        <label>ROO_Q1_1_3a</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ROO_Q1_2__c</fullName>
        <description>ROO_Q1_2</description>
        <label>ROO_Q1_2</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ROO_Q1_3__c</fullName>
        <description>ROO_Q1_3</description>
        <label>ROO_Q1_3</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ROO_Q1__c</fullName>
        <label>ROO_Q1</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>RT_YES_NO</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>RT_Q1__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>RT_Q1</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>RT_Q1_1__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>RT_Q1_1</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>RT_Q2_3__c</fullName>
        <label>RT_Q2_3</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>RT_Q2__c</fullName>
        <label>RT_Q2</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>RT_Q2_a__c</fullName>
        <label>RT_Q2_a</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>RT_Q2_b__c</fullName>
        <label>RT_Q2_b</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>RT_Q2_c__c</fullName>
        <label>RT_Q2_c</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>RT_Q2_d__c</fullName>
        <label>RT_Q2_d</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>RT_Q2_e__c</fullName>
        <label>RT_Q2_e</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>RT_Q2_f__c</fullName>
        <label>RT_Q2_f</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>RT_Q2_g__c</fullName>
        <label>RT_Q2_g</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>RT_Q8_1P__c</fullName>
        <description>% for rate</description>
        <label>RT_Q8_1P</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>RT_Q8_1__c</fullName>
        <label>RT_Q8_1</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>R00881</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>RT_Q8_2P__c</fullName>
        <description>% for rate</description>
        <label>RT_Q8_2P</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>RT_Q8_3P__c</fullName>
        <description>% for rate</description>
        <label>RT_Q8_3P</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PAYMENT_Q11_2__c</fullName>
        <label>PAYMENT_Q11_2</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>RT_PAYMENT_Q11_2</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>County_Rate_Plan__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>County Rate Plan</label>
        <referenceTo>T_COUNTY_RATE__c</referenceTo>
        <relationshipLabel>County Rate Plan</relationshipLabel>
        <relationshipName>CRP_Submissions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Action_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Submitted Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Is_Conditionally_Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Conditionally Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>this is a representation of Status in the event of being conditionally approved by the approver</description>
        <formula>IF(
            AND(
            ISPICKVAL(CDE_STATUS__c, &apos;APV&apos;),
            Is_Conditionally_Approved__c
            ),
            &apos;Conditionally Approved&apos;,
            CASE(
            TEXT(CDE_STATUS__c),
            &apos;PEN&apos;, &apos;Draft&apos;,
            &apos;SUB&apos;, &apos;Submitted&apos;,
            &apos;NRV&apos;, &apos;Need Revision&apos;,
            &apos;APV&apos;, &apos;Approved&apos;,
            &apos;&apos;
            )
            )</formula>
        <label>Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_being_approved_by_Flow__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is being approved by Flow</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Bypass_Validation_On__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Bypass Validation On</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CRP_CA_1__c</fullName>
        <label>CRP_CA_1</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>R00903</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>CRP_CA_1_other__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>CRP_CA_1_other</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CRP_CA_1_1__c</fullName>
        <label>CRP_CA_1_1</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>R00913</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>CRP_CA_1_1_other__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>CRP_CA_1_1_other</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CRP_CA_1_2__c</fullName>
        <label>CRP_CA_1_2</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>R00904</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>CRP_CA_1_2_other__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>CRP_CA_1_2_other</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CRP_CA_2__c</fullName>
        <label>CRP_CA_2</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>R00914</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>CRP_CA_2_other__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>CRP_CA_2_other</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CRP_CA_8_5_other__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>CRP_CA_8_5_other</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CRP_CA_10__c</fullName>
        <label>CRP_CA_10</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>R00916</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>CRP_CA_10_1__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>CRP_CA_10_1</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CRP_CA_10_other__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>CRP_CA_10_other</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CRP_PI_11__c</fullName>
        <label>CRP_PI_11</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>R00917</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>CRP_PI_11_1__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>CRP_PI_11_1</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CRP_PI_11_other__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>CRP_PI_11_other</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CRP_PI_12__c</fullName>
        <label>CRP_PI_12</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>R00918</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>CRP_PI_12_other__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>CRP_PI_12_other</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CRP_PI_13__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>CRP_PI_13</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CRP_PI_14_1__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>CRP_PI_14_1</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CRP_PI_14_2__c</fullName>
        <label>CRP_PI_14_2</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>R00920</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>CRP_PI_14_other__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>CRP_PI_14_other</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CRP_ATS_13__c</fullName>
        <label>CRP_ATS_13</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>R00922</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>CRP_ATS_13_other__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>CRP_ATS_13_other</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CRP_ATS_14__c</fullName>
        <label>CRP_ATS_14</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>R00908</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>CRP_ATS_15__c</fullName>
        <label>CRP_ATS_15</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>R00909</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>CRP_ATS_15_other__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>CRP_ATS_15_other</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CRP_PI_14_other_2__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>CRP_PI_14_other_2</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <label>County Rate Plan</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>IDN_COUNTY__c</columns>
        <columns>DTE_BEGIN_EFFV_RATE__c</columns>
        <columns>DTE_END_EFFV_RATE__c</columns>
        <columns>STATUS__c</columns>
        <columns>CDE_RATE_PLAN_TEMPLT__c</columns>
        <columns>IND_RATE_PLAN_TEMPLT__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Template_List_View</fullName>
        <columns>NAME</columns>
        <columns>STATUS__c</columns>
        <columns>DTE_BEGIN_EFFV_RATE__c</columns>
        <columns>DTE_END_EFFV_RATE__c</columns>
        <columns>CDE_RATE_PLAN_TEMPLT__c</columns>
        <columns>IND_RATE_PLAN_TEMPLT__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>IDN_COUNTY__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>IND_RATE_PLAN_TEMPLT__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Template</label>
    </listViews>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>County Rate Plan</pluralLabel>
    <sharingModel>Read</sharingModel>
    <!--Commented
    as part of CCCAP-10798-->
    <!--validationRules>
        <fullName>Approved_Plan_cannot_be_updated</fullName>
        <active>false</active>
        <description>Approved Plan cannot be updated</description>
        <errorConditionFormula>OR(AND( NOT(ISCHANGED(CDE_STATUS__c)) ,NOT(ISNEW()),ISPICKVAL(CDE_STATUS__c,
    &apos;APV&apos;)), TEXT(PRIORVALUE(CDE_STATUS__c)) = &apos;APV&apos; )</errorConditionFormula>
        <errorMessage>Approved Plan cannot be updated</errorMessage>
    </validationRules-->
    <validationRules>
        <fullName>Begin_Date_First_Day_of_Month_Future</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
        ISBLANK( County_Rate_Plan__c ),
		IF( ISNEW(),
		IF(OR ( DTE_BEGIN_EFFV_RATE__c &lt;= TODAY() , DAY(DTE_BEGIN_EFFV_RATE__c) &lt;&gt; 1),
		true,
		false),
		IF( AND(
			!ISPICKVAL(CDE_STATUS__c ,&apos;APV&apos;),
		OR ( DTE_BEGIN_EFFV_RATE__c &lt;= TODAY() , DAY(DTE_BEGIN_EFFV_RATE__c) &lt;&gt; 1),
		OR(
			!ISCHANGED( CDE_STATUS__c ),
			AND(
				ISCHANGED( CDE_STATUS__c ),			
				!ISPICKVAL(CDE_STATUS__c ,&apos;NRV&apos;)
			)),
		!ISCHANGED(OwnerId)
		),
		true,
		false )),
		!Is_being_approved_by_Flow__c,
		!ISCHANGED( Bypass_Validation_On__c ))</errorConditionFormula>
        <errorDisplayField>DTE_BEGIN_EFFV_RATE__c</errorDisplayField>
        <errorMessage>Begin Date Should Be First Day Of Future Month</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Template_Record</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
            AND(
            ISBLANK( County_Rate_Plan__c ),
            $UserRole.DeveloperName &lt;&gt; &apos;Template_Administrator&apos; ,
            $UserRole.DeveloperName &lt;&gt; &apos;County_Plan_Approver&apos;
            ),
            OR(
            IND_RATE_PLAN_TEMPLT__c ,
            PRIORVALUE(IND_RATE_PLAN_TEMPLT__c )
            )
            )</errorConditionFormula>
        <errorMessage>Template Records can be modified/checked by Template Administrators only</errorMessage>
    </validationRules>
</CustomObject>