CHATS_SIT/force-app/main/default/objects/T_COUNTY_RATE__c/validationRules/Begin_Date_First_Day_of_Month_Future.validationRule-meta.xml
<ValidationRule>
    <fullName>Begin_Date_First_Day_of_Month_Future</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
        ISBLANK( County_Rate_Plan__c ),
		IF( ISNEW(),
		IF(OR ( DTE_BEGIN_EFFV_RATE__c &lt;= TODAY() , DAY(DTE_BEGIN_EFFV_RATE__c) &lt;&gt; 1),
		true,
		false),
		IF( AND(
			!ISPICKVAL(CDE_STATUS__c ,&apos;APV&apos;),
		OR ( DTE_BEGIN_EFFV_RATE__c &lt;= TODAY() , DAY(DTE_BEGIN_EFFV_RATE__c) &lt;&gt; 1),
		OR(
			!ISCHANGED( CDE_STATUS__c ),
			AND(
				ISCHANGED( CDE_STATUS__c ),			
				!ISPICKVAL(CDE_STATUS__c ,&apos;NRV&apos;)
			)),
		!ISCHANGED(OwnerId)
		),
		true,
		false )),
		!Is_being_approved_by_Flow__c,
		!ISCHANGED( Bypass_Validation_On__c ))</errorConditionFormula>
    <errorDisplayField>DTE_BEGIN_EFFV_RATE__c</errorDisplayField>
    <errorMessage>Begin Date Should Be First Day Of Future Month</errorMessage>
</ValidationRule>