CHATS_SIT/force-app/main/default/objects/T_COUNTY_RATE__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>IDN_COUNTY__c</columns>
    <columns>DTE_BEGIN_EFFV_RATE__c</columns>
    <columns>DTE_END_EFFV_RATE__c</columns>
    <columns>Status__c</columns>
    <columns>CDE_RATE_PLAN_TEMPLT__c</columns>
    <columns>IND_RATE_PLAN_TEMPLT__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>