CHATS_SIT/force-app/main/default/objects/T_COUNTY_RATE__c/listViews/Copy_of_CountyRatePlans.listView-meta.xml
<ListView>
    <fullName>Copy_of_CountyRatePlans</fullName>
    <columns>NAME</columns>
    <columns>IDN_COUNTY__c</columns>
    <columns>DTE_BEGIN_EFFV_RATE__c</columns>
    <columns>DTE_END_EFFV_RATE__c</columns>
    <columns>CDE_STATUS__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>DTE_BEGIN_EFFV_RATE__c</field>
        <operation>greaterOrEqual</operation>
        <value>7/1/2022</value>
    </filters>
    <filters>
        <field>DTE_END_EFFV_RATE__c</field>
        <operation>equals</operation>
    </filters>
    <label>County Rate Plan State Monitoring List</label>
</ListView>