CHATS_SIT/force-app/main/default/objects/T_COUNTY_RATE__c/listViews/Datafix_CRP_2024.listView-meta.xml
<ListView>
    <fullName>Datafix_CRP_2024</fullName>
    <columns>NAME</columns>
    <columns>DTE_BEGIN_EFFV_RATE__c</columns>
    <columns>DTE_END_EFFV_RATE__c</columns>
    <columns>IDN_COUNTY__c</columns>
    <columns>CDE_RATE_PLAN_TEMPLT__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>DTE_BEGIN_EFFV_RATE__c</field>
        <operation>greaterOrEqual</operation>
        <value>10/1/2025</value>
    </filters>
    <filters>
        <field>CDE_STATUS__c</field>
        <operation>equals</operation>
        <value>PEN,SUB,NRV</value>
    </filters>
    <label>Datafix CRP 2024</label>
</ListView>