CHATS_SIT/force-app/main/default/objects/T_COUNTY_RATE__c/listViews/Datafix_View.listView-meta.xml
<ListView>
    <fullName>Datafix_View</fullName>
    <columns>NAME</columns>
    <columns>IDN_COUNTY__c</columns>
    <columns>DTE_BEGIN_EFFV_RATE__c</columns>
    <columns>DTE_END_EFFV_RATE__c</columns>
    <columns>CDE_STATUS__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>PAYMENT_Q13_1__c</columns>
    <columns>PAYMENT_Q13_2__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>DTE_END_EFFV_RATE__c</field>
        <operation>equals</operation>
    </filters>
    <filters>
        <field>IND_RATE_PLAN_TEMPLT__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>Datafix View</label>
</ListView>